--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.11.7",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.119",
+    "@mui/material": "^5.11.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "jose": "^4.11.4",
+    "jwt-decode": "^3.1.2",
     "material-ui": "^0.20.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
